--- a/templates/setup.html
+++ b/templates/setup.html
@@ -116,6 +116,7 @@
             </nav>
         </div>
     </header>
+    <h1 style="text-align: center;">Fitwell - Setup</h1>
     
     <div class="container">
         {% if q_num == 1 %}
