--- a/static/login.css
+++ b/static/login.css
@@ -38,6 +38,7 @@
 .login-box {
     background-color: #fff;
     width: 700px;
+    height: 400px;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     padding: 40px;
