--- a/templates/settings.html
+++ b/templates/settings.html
@@ -70,6 +70,7 @@
             </nav>
         </div>
     </header>
+    <h1 style="text-align: center;">Fitwell - Settings</h1>
 
     <div class="data">
         {% for line in data.split("\n") %}
