--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fitness App</title>
+    <title>Home - AllAbilities</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='topbar.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
 </head>
@@ -29,11 +29,11 @@
         <section class="hero">
             <div class="container">
                 <div class="hero-content">
-                    <h2 class="hero-title">Welcome to Fitwell</h2>
+                    <h2 class="hero-title">Welcome to AllAbilities</h2>
                     <p class="hero-description">Your ultimate destination for fitness and wellness.</p>
                 </div>
                 <div class="hero-image">
-                    <img src="{{ url_for('static', filename='assets/logo.png') }}" alt="Fitwell Gym">
+                    <img src="{{ url_for('static', filename='assets/logo.png') }}" alt="AllAbilities Gym">
                 </div>
             </div>
         </section>
@@ -41,7 +41,7 @@
         <section id="about" class="about-us">
             <div class="container">
                 <h2 class="section-title">About Us</h2>
-                <p class="about-description">Fitwell is dedicated to helping individuals achieve their fitness goals by providing top-notch facilities, personalized training programs, and a supportive community environment. Our team of experienced trainers and staff are committed to helping you lead a healthier and happier lifestyle. Whether you're a beginner or a seasoned athlete, Fitwell has everything you need to succeed on your fitness journey.</p>
+                <p class="about-description">AllAbilities is dedicated to helping individuals achieve their fitness goals by providing top-notch facilities, personalized training programs, and a supportive community environment. Our team of experienced trainers and staff are committed to helping you lead a healthier and happier lifestyle. Whether you're a beginner or a seasoned athlete, AllAbilities has everything you need to succeed on your fitness journey.</p>
             </div>
         </section>
     </main>
