--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fitwell Login</title>
+    <title>AllAbilities Login</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='login.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='topbar.css') }}">
 </head>
@@ -28,7 +28,7 @@
 
     <div class="i-container">
         <div class="login-box">
-            <h1 class="title">Fitwell Login</h1>
+            <h1 class="title">AllAbilities Login</h1>
             <form action="#" method="POST" class="login-form">
                 <input name="email" type="email" name="email" placeholder="Email" required>
                 <br>
