--- a/templates/nutrition.html
+++ b/templates/nutrition.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nutrition - Fitwell</title>
+    <title>Nutrition - AllAbilities</title>
 
     <link rel="stylesheet" href="{{ url_for('static', filename='topbar.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='exercise.css') }}">
@@ -27,7 +27,7 @@
         </div>
     </header>
 
-    <h1 style="text-align: center;">Fitwell - Nutrition</h1>
+    <h1 style="text-align: center;">AllAbilities - Nutrition</h1>
 
     <div id="messages">
         <div class="message person-message">
