--- a/templates/settings.html
+++ b/templates/settings.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Settings - Fitwell</title>
+    <title>Settings - AllAbilities</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='topbar.css') }}">
     <style>
         body {
@@ -70,7 +70,7 @@
             </nav>
         </div>
     </header>
-    <h1 style="text-align: center;">Fitwell - Settings</h1>
+    <h1 style="text-align: center;">AllAbilities - Settings</h1>
 
     <div class="data">
         {% for line in data.split("\n") %}
