--- a/templates/setup.html
+++ b/templates/setup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Setup - Fitwell</title>
+    <title>Setup - AllAbilities</title>
 
     <link rel="stylesheet" href="{{ url_for('static', filename='topbar.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='setup.css') }}">
@@ -116,7 +116,7 @@
             </nav>
         </div>
     </header>
-    <h1 style="text-align: center;">Fitwell - Setup</h1>
+    <h1 style="text-align: center;">AllAbilities - Setup</h1>
     
     <div class="container">
         {% if q_num == 1 %}
