--- a/templates/exercise.html
+++ b/templates/exercise.html
@@ -49,7 +49,7 @@
                 placeholder="Type your message here..."
             />
             <button name="submit" type="submit" id="submit-button" value="submit">Send</button>
-            <button name="nutrition" type="submit" id="nutri-button" value="nutricion"><img src="{{ url_for('static', filename='assets/nutrition.png') }}" alt="Make a nutrition plan based on current chat" height="30"></button>
+            <button style="margin-left: 50px;" name="nutrition" type="submit" id="nutri-button" value="nutricion"><img src="{{ url_for('static', filename='assets/nutrition.png') }}" alt="Make a nutrition plan based on current chat" height="200"></button>
         </form>
     </div>
 
