--- a/templates/signup.html
+++ b/templates/signup.html
@@ -29,7 +29,7 @@
 
     <div class="i-container">
         <div class="login-box">
-            <h1 class="title">Fitwell Signup</h1>
+            <h1 class="title">AllAbilities Signup</h1>
             <form action="#" method="POST" class="login-form">
                 <input name="username" type="text" name="username" placeholder="Username" required>
                 <br>
