--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
                     <p class="hero-description">Your ultimate destination for fitness and wellness.</p>
                 </div>
                 <div class="hero-image">
-                    <img src="{{ url_for('static', filename='assets/logo.png') }}" alt="AllAbilities Gym">
+                    <img src="{{ url_for('static', filename='assets/logo.png') }}" height="250px" alt="AllAbilities Gym">
                 </div>
             </div>
         </section>
